overflow fix

--- a/control-version3/main3.css
+++ b/control-version3/main3.css
@@ -13,7 +13,7 @@ body {
   margin: 0;
   padding:0;
   background-color: #f9f9f9;
-  overflow: hidden;
+  overflow-y: hidden;
 }
 
 .container {
